--- a/readme.htm
+++ b/readme.htm
@@ -5,12 +5,6 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<link rel="icon" type="image/x-icon" href="http://scriptedamigaemulator.net/favicon.ico" />
 		<link rel="stylesheet" type="text/css" href="index.css" />
-		<script type="text/javascript">
-			function openNewTab(url) {
-				window.open(url, '_blank');
-				window.focus();
-			}
-		</script>
 	</head>
 	<body>  
 		<div class="head">
@@ -101,39 +95,39 @@
 			<ul>
 				<li><span class="fwb">Written and ported by</span>
 					<ul>
-						<li>Rupert Hausberger &lt;<a href="mailto:rupert_hausberger@gmx.net">rupert_hausberger@gmx.net</a>&gt; (<a href="javascript:openNewTab('https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=ZJA3YVT6EP55A')">donate</a>)</li>
+						<li>Rupert Hausberger &lt;<a href="mailto:rupert_hausberger@gmx.net">rupert_hausberger@gmx.net</a>&gt; (<a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=ZJA3YVT6EP55A">donate</a>)</li>
 					</ul>
 				</li>
 			</ul>
 			<ul>
 				<li><span class="fwb">Source-code</span>
 					<ul>
-						<li><a href="javascript:openNewTab('https://github.com/naTmeg/ScriptedAmigaEmulator')">github.com/naTmeg/ScriptedAmigaEmulator</a></li>
+						<li><a target="_blank" href="https://github.com/naTmeg/ScriptedAmigaEmulator">github.com/naTmeg/ScriptedAmigaEmulator</a></li>
 					</ul>
 				</li>
 			</ul>
 			<ul>
 				<li><span class="fwb">License</span>
 					<ul>
-						<li><a href="javascript:openNewTab('gpl.htm')">GPL</a></li>
+						<li><a target="_blank" href="gpl.htm">GPL</a></li>
 					</ul>
 				</li>
 			</ul>
 			<ul>
 				<li><span class="fwb">Thanks</span>
 					<ul>
-						<li><a href="javascript:openNewTab('http://www.amigaemulator.org')">Bernd Schmidt</a></li>
-						<li><a href="javascript:openNewTab('http://winuae.net')">WinUAE team</a></li> 
-						<li><a href="javascript:openNewTab('http://aros.org')">AROS team</a></li>
+						<li><a target="_blank" href="http://www.amigaemulator.org">Bernd Schmidt</a></li>
+						<li><a target="_blank" href="http://winuae.net">WinUAE team</a></li> 
+						<li><a target="_blank" href="http://aros.org">AROS team</a></li>
 					</ul>
 				</li>
 			</ul>
 			<ul>
 				<li><span class="fwb">Some stats</span>
 					<ul>
-						<li>The first public version had ~13.000 lines of code, currently ~23.500</li>
-						<li>About 5 months development time for the first version.</li>
-						<li>About the half of the first version was written from scratch, the rest was ported from WinUAE.</li>
+						<li>About 5 months development time for the first public version. (0.5)</li>
+						<li>About the half of the first version was written from scratch, the rest was ported from various UAE-sources.</li>
+						<li>The first version had ~13.000 lines of code, currently ~23.500, most new code is ported from WinUAE.</li>
 					</ul>
 				</li>
 			</ul>
@@ -284,7 +278,7 @@
 									<ul>
 										<li>Chaned the project-name from 'Janus' to 'SAE' (Scripted Amiga Emulator).<br /> 
 											This step is necessary because i did'nt enough research before the initial release.<br />
-											There is already a project with that name in it. (<a href="javascript:openNewTab('http://janus-uae.sourceforge.net')">janus-uae</a>)
+											There is already a project with that name in it. (<a target="_blank" href="http://janus-uae.sourceforge.net">janus-uae</a>)
 											I'm sorry for that, that was kinda stupid :)</li>
 										<li>Separated the GUI form the core and rewrote most of it.</li>
 										<li>Simplified the whole code. This means, that functions are called faster.</li>
