--- a/readme.htm
+++ b/readme.htm
@@ -15,46 +15,29 @@
 			<img src="images/logo.png" alt="Scripted Amiga Emulator" />		
 		</div>	  						
 		<div class="readme">	
-			<table>
-				<tr>
-					<td>
-						<ul>
-							<li><span class="fwb">Requirements</span>
-								<ul>
-									<li>A very fast computer</li>
-									<li>A browser capable of HTML5 with:
-										<ul>
-											<li>WegGL or Canvas 2D <span class="gray">(optional)</span></li>
-											<li>WebAudio <span class="gray">(optional)</span></li>
-											<li>FileReader <span class="gray">(GUI)</span></li>
-											<li>Typed arrays</li>
-										</ul>
-									</li>
-									<li>A ROM:
-										<ul>
-											<li>Amiga Kickstart 1.0-2.05 <span class="gray">(not included for copyright reasons)</span></li>
-											<li>AROS Kickstart <span class="gray">(included)</span></li>
-										</ul>
-									</li>
-									<li style="list-style-type:none"><br /></li>
-									<li>And a bunch of ADF-files to test <span class="gray">(optional)</span></li>
-								</ul>
-							</li>
-						</ul>
-					</td>
-					<td>
-						<table>
-							<tr><td colspan="2"><span class="fwb">Supported browsers</span></td></tr>
-							<tr><td class="armb" style="color:green">Chrome</td><td>Very fast</td></tr>
-							<tr><td class="armb" style="color:orange">Firefox</td><td>Medium speed</td></tr>
-							<tr><td class="armb" style="color:orange">Opera</td><td>Slow speed, no audio</td></tr>
-							<tr><td class="armb" style="color:red">IE</td><td>No support</td></tr>
-							<tr><td class="armb">Other</td><td>Untested</td></tr>
-						</table>						
-					</td>
-				</tr>			
-			</table>
-			<div class="hr"></div>
+			<ul>
+				<li><span class="fwb">Requirements</span>
+					<ul>
+						<li>A very fast computer</li>
+						<li>A browser capable of HTML5 with:
+							<ul>
+								<li>WegGL or Canvas 2D <span class="gray">(optional)</span></li>
+								<li>WebAudio <span class="gray">(optional)</span></li>
+								<li>FileReader <span class="gray">(GUI)</span></li>
+								<li>Typed arrays</li>
+							</ul>
+						</li>
+						<li>A ROM:
+							<ul>
+								<li>Amiga Kickstart 1.0-2.05 <span class="gray">(not included for copyright reasons)</span></li>
+								<li>AROS Kickstart <span class="gray">(included)</span></li>
+							</ul>
+						</li>
+						<li style="list-style-type:none"><br /></li>
+						<li>And a bunch of ADF-files to test <span class="gray">(optional)</span></li>
+					</ul>
+				</li>
+			</ul>
 			<ul>
 				<li><span class="fwb">Goals</span>
 					<ul>
@@ -131,80 +114,31 @@
 					</ul>
 				</li>
 			</ul>
-			<!--<div class="hr"></div>
-			<table>
-				<tr><td colspan="3" class="acm"><span class="fwb">Fully working...</span></td></tr>
-				<tr>
-					<td>
-						<ul>
-							<li><span class="fwb">Games</span>
-								<ul>
-									<li>Alien Breed</li>
-									<li>Alien Breed Special Edition 92<span class="fwb"> (0.7)</span></li>
-									<li>Alien Breed Tower Assault<span class="fwb"> (0.6)</span></li>
-									<li>Boby Blows Galactic<span class="fwb"> (0.7)</span></li>
-									<li>Agony<span class="fwb"> (0.6.1)</span></li>
-									<li>Another World</li>
-									<li>Barbarian<span class="fwb"> (0.7)</span></li>
-									<li>Battle Chess</li>
-									<li>Blood Money</li>
-									<li>Crystal Hammer</li>
-									<li>Dynablaster<span class="fwb"> (0.7)</span></li>
-									<li>Firepower</li>
-									<li>Lotus Turbo Challenge 1/2<span class="fwb"> (0.6)</span></li>
-									<li>North'n South<span class="fwb"> (0.7)</span></li>
-									<li>Pinball Dreams</li>
-									<li>Pinball Fantasies (the demo with 1 desk)</li>
-									<li>Prince of Persia<span class="fwb"> (0.7)</span></li>
-									<li>Project-X<span class="fwb"> (0.7)</span></li>
-									<li>Project-X Special Edition '92<span class="fwb"> (0.6)</span></li>
-									<li>P.O.W.</li>
-									<li>Rubicon<span class="fwb"> (0.6)</span></li>
-									<li>R-Type 2</li>
-									<li>Shadow of the Beast 2<span class="fwb"> (0.6)</span></li>
-									<li>Terminator 2<span class="fwb"> (0.7)</span></li>
-									<li>Turrican 1/2</li>
-									<li>Turrican 3<span class="fwb"> (0.6)</span></li>
-									<li>Wings<span class="fwb"> (0.6)</span></li>
-									<li>Wings of Death<span class="fwb"> (0.6.1)</span></li>
-								</ul>
-							</li>
-						</ul>
-					</td>
-					<td>
-						<ul>
-							<li><span class="fwb">Demos</span>
-								<ul>
-									<li>Deja Vu</li>
-									<li>How to skin a cat</li>
-									<li>Project-X (demo-rolling)<span class="fwb"> (0.6)</span></li>
-									<li>State of the Art</li>
-								</ul>
-							</li>
-						</ul>
-					</td>
-					<td>
-						<ul>
-							<li><span class="fwb">Apps</span>
-								<ul>
-									<li>Devpak 2.14</li>
-									<li>DPaint 4.1</li>
-									<li>Protracker 3.61</li>
-									<li>SysInfo 3.24</li>
-									<li>Workbench 1.x</li>
-									<li>Workbench 2.04<span class="fwb"> (0.6)</span></li>
-								</ul>
-							</li>
-						</ul>
-					</td>
-				</tr>
-				<tr><td colspan="3" class="acm"><span class="fwb">Note:</span> The lists corresponds to Kickstart 1.3</td></tr>
-			</table>
-			<div class="hr"></div>-->
 			<ul>
 				<li><span class="fwb">History</span>
 					<ul>
-						<li>0.8.1 (19.01.2013):
+						<li><span class="fwb">0.8.2 (10.01.2015)</span>
+							<ul>	
+								<li>Audio
+									<ul>
+										<li>Fixed 'WebAudio'-output. All other dropped. Thanks 'dmcoles'.</li>
+										<li>Some speed optimizations.</li>
+									</ul>
+								</li>			
+								<li>CPU
+									<ul>
+										<li>Fixed a bug in the DIVS-function in combination with negative numbers. Thanks 'dmcoles'.</li>
+									</ul>
+								</li>			
+								<li>Common
+									<ul>
+										<li>Removed old copyright statements in the source files. Thanks 'swinkamor12'.</li>
+									</ul>
+								</li>			
+							</ul>
+						</li>                                                                               
+						<li style="list-style-type:none"><br/></li>					
+						<li><span class="fwb">0.8.1 (19.01.2013):</span>
 							<ul>	
 								<li>Common
 									<ul>
@@ -216,7 +150,7 @@
 							</ul>
 						</li>                                                                               
 						<li style="list-style-type:none"><br/></li>
-						<li>0.8.0 (16.01.2013):
+						<li><span class="fwb">0.8.0 (16.01.2013):</span>
 							<ul>
 								<li>Display
 									<ul>
@@ -272,7 +206,7 @@
 							</ul>
 						</li>                                                                               
 						<li style="list-style-type:none"><br/></li>
-						<li>0.7.0 (24.12.2012):
+						<li><span class="fwb">0.7.0 (24.12.2012):</span>
 							<ul>
 								<li>Common
 									<ul>
@@ -325,7 +259,7 @@
 							</ul>
 						</li>                                                                               
 						<li style="list-style-type:none"><br/></li>
-						<li>0.6.1 (05.11.2012):
+						<li><span class="fwb">0.6.1 (05.11.2012):</span>
 							<ul>
 								<li>CPU
 									<ul>
@@ -355,7 +289,7 @@
 							</ul>
 						</li>
 						<li style="list-style-type:none"><br/></li>
-						<li>0.6 (25.10.2012):
+						<li><span class="fwb">0.6 (25.10.2012):</span>
 							<ul>
 								<li>ROM
 									<ul>
@@ -431,7 +365,7 @@
 							</ul>
 						</li>
 						<li style="list-style-type:none"><br/></li>
-						<li>0.5 (01.09.2012):
+						<li><span class="fwb">0.5 (01.09.2012):</span>
 							<ul>
 								<li>Initial.</li>
 							</ul>
