--- a/index.htm
+++ b/index.htm
@@ -62,7 +62,10 @@
 					It is heavily based on <a target="_blank" href="http://winuae.net">WinUAE</a> and does use the <a target="_blank" href="http://aros.org">AROS</a>-Kickstart replacement.
 					For more informations,<br />please see the <a target="_blank" href="readme.htm">description.</a><br />
 					<br />
-					Select an item to 'Start' from the database, or press 'Config' for an advanced setup...
+					Select an item to 'Start' from the database or press 'Config' for an advanced setup...<br />
+					<br />
+					<span class="info"><b>Note</b>: This project does require a <b>fast computer</b>.<br />
+					Mobile- and Tablet-devices may work, but will most likely have a too slow framerate.</span>
 					<div style="height:10px"></div>
 					<div id="config_database_hof">
 						<div class="acm">
@@ -151,7 +154,7 @@
 								<div class="page" id="cfg_page_model">
 									<table>
 										<tr>
-											<th colspan="2"><span class="label">Model</span> <a class="wiki" target="_blank" href="https://en.wikipedia.org/wiki/Amiga_models_and_variants">?</a></th>
+											<th colspan="2"><span class="label">Model</span> <a target="_blank" href="https://en.wikipedia.org/wiki/Amiga_models_and_variants">?</a></th>
 											<th><span class="label">CPU</span></th>
 											<th><span class="label">Chipset</span></th>
 											<th><span class="label">Kickstart</span></th>
@@ -166,8 +169,8 @@
 													<option value="3">Amiga 1000, Velvet-prototype</option>
 												</select>
 											</td>
-											<td>68000 <a class="wiki" target="_blank" href="https://en.wikipedia.org/wiki/Motorola_68000">?</a></td>
-											<td>OCS <a class="wiki" target="_blank" href="https://en.wikipedia.org/wiki/Original_Amiga_chipset">?</a></td>
+											<td>68000 <a target="_blank" href="https://en.wikipedia.org/wiki/Motorola_68000">?</a></td>
+											<td>OCS <a target="_blank" href="https://en.wikipedia.org/wiki/Original_Amiga_chipset">?</a></td>
 											<td>0.x-1.1</td>
 											<td>1985-87</td>
 										</tr>
@@ -200,7 +203,7 @@
 												</select>
 											</td>
 											<td>68000</td>
-											<td>ECS <a class="wiki" target="_blank" href="https://en.wikipedia.org/wiki/Enhanced_Chip_Set">?</a></td>
+											<td>ECS <a target="_blank" href="https://en.wikipedia.org/wiki/Enhanced_Chip_Set">?</a></td>
 											<td>2.04</td>
 											<td>1991-92</td>
 										</tr>
@@ -224,14 +227,14 @@
 													<option value="1">Amiga 1200, 4M Fast, RTC</option>
 												</select>
 											</td>
-											<td>68020 <a class="wiki" target="_blank" href="https://en.wikipedia.org/wiki/Motorola_68020">?</a></td>
-											<td>AGA <a class="wiki" target="_blank" href="https://en.wikipedia.org/wiki/Advanced_Graphics_Architecture">?</a></td>
+											<td>68020 <a target="_blank" href="https://en.wikipedia.org/wiki/Motorola_68020">?</a></td>
+											<td>AGA <a target="_blank" href="https://en.wikipedia.org/wiki/Advanced_Graphics_Architecture">?</a></td>
 											<td>3.0-3.1</td>
 											<td>1992-96</td>
 										</tr>
 										<tr><td><input type="radio" name="cfg_model" value="A3000" /></td>
 											<td>Amiga 3000 <span class="info">(no FPU and SCSI)</span></td>
-											<td>68030 <a class="wiki" target="_blank" href="https://en.wikipedia.org/wiki/Motorola_68030">?</a></td>
+											<td>68030 <a target="_blank" href="https://en.wikipedia.org/wiki/Motorola_68030">?</a></td>
 											<td>ECS</td>
 											<td>1.3-2.04</td>
 											<td>1990-92</td>
@@ -353,7 +356,7 @@
 										<tr>
 											<td class="arm"><span class="label">Collisions</span></td>
 											<td></td>
-											<td class="arm"><span class="label">Blitter</span> <a class="wiki" target="_blank" href="https://en.wikipedia.org/wiki/Blitter">?</a></td>
+											<td class="arm"><span class="label">Blitter</span> <a target="_blank" href="https://en.wikipedia.org/wiki/Blitter">?</a></td>
 											<td></td>
 										</tr>
 										<tr>
@@ -413,9 +416,9 @@
 										<table style="border-collapse:collapse">
 											<tr>
 												<td class="arm"><span class="label">Gayle</span></td>
-												<td><a class="wiki" target="_blank" href="https://en.wikipedia.org/wiki/Amiga_custom_chips#Gayle">?</a></td>
+												<td><a target="_blank" href="https://en.wikipedia.org/wiki/Amiga_custom_chips#Gayle">?</a></td>
 												<td class="arm"><span class="label">RTC</span></td>
-												<td><a class="wiki" target="_blank" href="https://en.wikipedia.org/wiki/Real-time_clock">?</a></td>
+												<td><a target="_blank" href="https://en.wikipedia.org/wiki/Real-time_clock">?</a></td>
 											</tr>
 											<tr>
 												<td class="arm">Onboard IDE</td>
@@ -444,7 +447,7 @@
 											<tr><td colspan="4"><div style="height:10px"></div></td></tr>
 											<tr>
 												<td class="arm"><span class="label">CIA</span></td>
-												<td><a class="wiki" target="_blank" href="https://en.wikipedia.org/wiki/Amiga_custom_chips#CIA">?</a></td>
+												<td><a target="_blank" href="https://en.wikipedia.org/wiki/Amiga_custom_chips#CIA">?</a></td>
 												<td class="arm"><span class="label">Misc</span></td>
 												<td></td>
 											</tr>
@@ -489,7 +492,7 @@
 											<td class="arm"><span class="label">RAMSEY</span></td>
 											<td>
 												<span class="info">(A3000/A4000)</span>
-												<a class="wiki" target="_blank" href="https://en.wikipedia.org/wiki/Amiga_custom_chips#Ramsey_.26_Super_DMAC">?</a>
+												<a target="_blank" href="https://en.wikipedia.org/wiki/Amiga_custom_chips#Ramsey_.26_Super_DMAC">?</a>
 											</td>
 										</tr>
 										<tr>
@@ -547,11 +550,11 @@
 										<tr><td colspan="4"><div style="height:10px"></div></td></tr>
 										<tr>
 											<td class="arm"><span class="label">ZorroII</span></td>
-											<td><a class="wiki" target="_blank" href="https://en.wikipedia.org/wiki/Amiga_Zorro_II">?</a></td>
+											<td><a target="_blank" href="https://en.wikipedia.org/wiki/Amiga_Zorro_II">?</a></td>
 											<td class="arm"><span class="label">ZorroIII</span></td>
 											<td>
 												<span class="info">(A3000/A4000)</span>
-												<a class="wiki" target="_blank" href="https://en.wikipedia.org/wiki/Amiga_Zorro_III">?</a>
+												<a target="_blank" href="https://en.wikipedia.org/wiki/Amiga_Zorro_III">?</a>
 											</td>
 										</tr>
 										<tr>
@@ -588,7 +591,7 @@
 										</tr>
 										<tr>
 											<td class="arm"><input id="cfg_mem_z2fastautoconfig" type="checkbox" /></td>
-											<td>AutoConfig&trade; <a class="wiki" target="_blank" href="https://en.wikipedia.org/wiki/Autoconfig">?</a></td>
+											<td>AutoConfig&trade; <a target="_blank" href="https://en.wikipedia.org/wiki/Autoconfig">?</a></td>
 											<td class="arm">Mapping</td>
 											<td>
 												<select id="cfg_mem_z3mapping" size="1">
@@ -619,7 +622,7 @@
 															<td style="width:100%"></td>
 															<td>
 																<input id="cfg_rom_kickshifter" type="checkbox" />Patch for 'ShapeShifter'
-																<a class="wiki" target="_blank" href="http://shapeshifter.cebix.net/">?</a>
+																<a target="_blank" href="http://shapeshifter.cebix.net/">?</a>
 															</td>
 														</tr>
 														<tr>
@@ -1288,7 +1291,7 @@
 												<td class="alm"><input id="cfg_video_brightness" type="text" maxlength="5" onkeypress="return isDecKey(event, true)" /> <span class="info">(-1000 to 1000)</span></td>
 												<td class="arm">Background</td>
 												<td class="alm"><input id="cfg_video_background" type="text" maxlength="6" onkeypress="return isHexKey(event)" />
-													<span class="info">(#rrggbb)</span> <a class="wiki" target="_blank" href="http://www.rapidtables.com/web/color/RGB_Color.htm">?</a>
+													<span class="info">(#rrggbb)</span> <a target="_blank" href="http://www.rapidtables.com/web/color/RGB_Color.htm">?</a>
 												</td>
 											</tr>
 											<tr>
