--- a/index.htm
+++ b/index.htm
@@ -1678,6 +1678,7 @@
 									<td><button onclick="reset()">Reset</button></td>
 									<td><button onclick="stop()">Stop</button></td>
 									<td><button onclick="pause(1)" id="controls_pr">Pause</button></td>
+									<td><button onclick="mute(1)" id="controls_mp">Mute</button></td>
 									<td id="controls_disk"><button onclick="dskchgOpen()">Disk</button></td>
 									<!--<td><button onclick="toggleFullScreen()">FS</button></td>-->
 								</tr>
